--- a/helpers/_index.scss
+++ b/helpers/_index.scss
@@ -64,7 +64,7 @@
     }
 }
 
-@mixin aspect-break($aspect-ratio: 4 / 3){
+@mixin aspect-break($aspect-ratio: list.slash(4, 3)){
     @media only screen and (max-aspect-ratio: $aspect-ratio) {
         @content;
     }
